--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1237,6 +1237,9 @@ section.lazy-placeholder:after {
     font-size: 20px !important;
   }
 }
+.cid-rY5OztMv0t .mbr-section-title {
+  color: #ffffff;
+}
 .cid-qTkA127IK8 {
   background-color: #232323;
 }
