--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1240,10 +1240,102 @@ section.lazy-placeholder:after {
 .cid-rY5OztMv0t .mbr-section-title {
   color: #ffffff;
 }
-.cid-rY5VfNxtY0 {
-  padding-top: 30px;
-  padding-bottom: 120px;
+.cid-rY5WsLzpp6 {
+  padding-top: 90px;
+  padding-bottom: 90px;
   background-color: #232323;
+}
+.cid-rY5WsLzpp6 .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-rY5WsLzpp6 .number-wrap {
+  color: #ffffff;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-rY5WsLzpp6 .number {
+  font-style: normal;
+  font-weight: 700;
+  text-transform: none;
+  letter-spacing: -2px;
+  font-size: 55px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #ffffff;
+}
+.cid-rY5WsLzpp6 .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-rY5WsLzpp6 .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  font-size: 55px;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #ffffff;
+}
+.cid-rY5WsLzpp6 .countdown-cont {
+  background: linear-gradient(45deg, #149dcc, #33ff85);
+  max-width: 700px;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rY5WsLzpp6 .dot {
+    display: none;
+  }
+  .cid-rY5WsLzpp6 .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 25%;
+    flex: 0 0 25%;
+  }
+  .cid-rY5WsLzpp6 .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 576px) {
+  .cid-rY5WsLzpp6 .row {
+    flex-wrap: nowrap;
+  }
+  .cid-rY5WsLzpp6 .number {
+    white-space: nowrap;
+  }
+}
+@media (max-width: 440px) {
+  .cid-rY5WsLzpp6 .number {
+    font-size: 30px;
+  }
+  .cid-rY5WsLzpp6 .period {
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rY5WsLzpp6 .number {
+    font-size: 20px;
+  }
+  .cid-rY5WsLzpp6 .period {
+    font-size: 0.6rem;
+  }
 }
 .cid-qTkA127IK8 {
   background-color: #232323;
